make Ben's editorial changes to my new text from memo, fix footnote 11

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -119,7 +119,7 @@ The probability of nature selecting the high type for a given country is $p$. Th
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
 
-Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors but no signaling game, see Maor and Solan (2015). They focus on the players' belief structures, while our initial signaling stage simplifies the analysis of beliefs.} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
+Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors, focused on studying players' belief structures, see Maor and Solan (2015).  Our model differs in that it adds an initial period, before the repeated Prisoner's Dilemma begins, in which players make costly concessions to each other.  We will see that these concessions enable signaling between the players that render the analysis of their beliefs much simpler.} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
 
 The countries' stage game actions will be referred to as ``Trust'' and ``Fight'' as represented in Table 1, where Country 1 is the row player and Country 2 is the column player.
 
@@ -192,7 +192,7 @@ Details of the analysis are in the Appendix. We begin by characterizing the conc
 \end{lemma}
 \emph{Proof:} See Appendix.
 
-Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession, so neither is there a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions where the players separate in the repeated game as in the no concessions separating equilibrium.}
+Low types don't give gifts in this separating equilibrium because the gift wouldn't serve any purpose: the low type will be identified through the separating behavior of the high types and there is thus nothing to gain.\footnote{The transmission of information about each country's type is, by definition, essential for the existence of a \emph{concessions separating equilibrium}. Thus, there cannot exist a \emph{concessions semi-separating equilibrium} where the low type gives a concession with strictly positive probability; the concessions would not transmit the information required to build trust. If no information is transmitted, then the high type has no incentive itself to give a concession. Therefore, there cannot be a semi-separating equilibrium with the low type mixing between strictly positive and zero concessions and the players separating in the repeated game as in the no concessions separating equilibrium.}
 
 \begin{theorem}
 \emph{Concessions Separating Equilibrium (CSE)}
@@ -281,7 +281,7 @@ $\de_h$ is not involved in any of these calculations, so we can see that for any
 
 Comparative statics provide intuition for why using concessions with future material value makes it harder to achieve peace. The patience threshold is decreasing in $T$ because the benefit from cooperating with another high type increases. Similarly, the threshold is increasing in $D$ because the magnitude of future damages from pairing with a low type increases. Perhaps less obvious is the impact of $W$: here the threshold is again increasing. This is because the high type's own temptation to not give a gift and to use a received concession for military purposes increases in $W$.
 
-When the low type's patience level $\de_l$ increases, the high type's patience threshold decreases because a smaller gift is required to disincentivize the low type from pretending to be a high type. Finally, the patience threshold is decreasing in $p$, the proportion of cooperative types in the population. This happens because a higher $p$ increases the chances of cooperation, a reciprocated gift, and the benefits from the associated public goods. This gain outweighs the cost of giving a larger gift, which is necessary to deter the low type from mimicking the high type when the probability of receiving a gift increases with $p$. In contrast, in the model with no material value---where the incentives are the same as in the model of the next section where material value can be destroyed---the need to give a larger gift is exactly offset by the increased value of cooperation when there is no material value. Thus, an increase in $p$ increases the range of patience levels under which cooperation can be achieved when there is material value but makes no change if there is no material value.\footnote{Comparative statics calculations available from the authors upon request.} 
+When the low type's patience level $\de_l$ increases, the high type's patience threshold decreases because a smaller gift is required to disincentivize the low type from pretending to be a high type. Finally, the patience threshold is decreasing in $p$, the proportion of cooperative types in the population. This happens because a higher $p$ increases the chances of cooperation, a reciprocated gift, and the benefits from the associated public goods. The larger expected gain from a gift makes states willing to bear the cost of giving a larger gift; thus, when p is higher, a larger gift is necessary to deter the low type from mimicking the high type. In contrast, in the model with no material value---where the incentives are the same as in the model of the next section where material value can be destroyed---the need to give a larger gift is exactly offset by the increased value of cooperation when there is no material value. Thus, an increase in $p$ increases the range of patience levels under which cooperation can be achieved when there is material value but makes no change if there is no material value.\footnote{Comparative statics calculations available from the authors upon request.} 
 
 Thus only an increase in the benefit from `Peace' and an increase in the low type's patience level make it easier to achieve `Peace' when gifts have future material value. Increases in all other parameters make it harder to achieve `Peace.'
  
