address Meirowitz model and make stronger argument about our contributions

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -50,7 +50,7 @@ University of California, San Diego\\
 \maketitle
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's ability to cooperate or make peace, concessions can be used to indicate an interest in cooperation or peacemaking. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace or cooperation. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace and cooperation. In this process, we open up a new rationale for mediation: to increase the inefficiency of signaling in a preliminary round of negotiations. 
+When two parties are engaged in conflict and each distrusts the other's ability to cooperate or make peace, concessions can be used to indicate an interest in cooperation or peacemaking. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace or cooperation. We show this formally using a repeated game that is preceded by an opportunity to signal one's commitment to cooperation through the provision of concessions. We then use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace and cooperation. In this process, we open up a new rationale for mediation: to increase the efficiency of signaling in a preliminary round of negotiations and to overcome the concern that concessions will be used against the giver in the future. 
 \end{abstract}
 
 
@@ -61,7 +61,7 @@ In negotiations with its neighbors, Israel is hesitant to give certain concessio
 
 In both active wars and long-simmering conflicts, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well, such as long-running episodes of geo-strategic competition: parties engage in costly conflict while they negotiate. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
 
-We introduce a two-sided signaling model in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. In other words, commitment is essentially a far-sighted preferences that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement.
+We introduce a two-sided signaling model followed by a repeated Prisoner's Dilemma in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. We use this model to show that cooperation can be undermined by concerns that concessions could be used against the giver in the future. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. In other words, commitment is essentially a far-sighted preferences that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement.
 %The sentence above literally parrots the editor's words back to them. Too on the nose?
 
 %Attempting to add in the China-US case in a prominent way. The prose is more awkward than I would like still. - March 13, 2023 BG
@@ -107,7 +107,7 @@ This demonstration of the incentives for inefficient concessions leads to a new 
 
 It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006), and parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). We thus model parties to a conflict who can benefit from seeking mediation in order to overcome mistrust.\footnote{Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010; Beardsley and Lo 2014).}
 
-These empirical results have until recently lacked strong theoretical foundations. Mediation is not uncommon, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2009, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2015). This paper expands the theoretical literature by modeling the role of mediation when information is asymmetric about parties' abilities to commit to peace. Here, a mediator can remove the incentive to make concessions that are inefficient. 
+These empirical results have until recently lacked strong theoretical foundations. Mediation is not uncommon, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2009, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2019). In particular, Meirowitz et al. 2019 shows that---when asymmetric information is about the level of militarization---a `Myerson' mediator can circumvent the incentives for militarization that arises in unmediated peace talks and improve the changes for peace. This paper expands the theoretical literature by modeling the role of a manipulative mediator when the information asymmetry is about parties' abilities to commit to cooperation and concessions have future material value that could be used to harm the giver. Here, a mediator can achieve peace (1) in situations where bilateral concessions cannot, and (2) with concessions that are more efficient when bilateral concessions must be inefficient to achieve peace. 
 
 
 \section{Model}
@@ -824,7 +824,7 @@ Using the mediation mechanism $M$ with $e=0$ and $g_h=1.6$, we satisfy both the 
 \item Meirowitz, Adam; Massimo Morelli; Kristopher W. Ramsey and Francesco Squintani. ``Mediation and Strategic Militarization.'' Unpublished manuscript, 2012.
 
 \item Meirowitz, Adam; Massimo Morelli; Kristopher W. Ramsey and Francesco Squintani. ``Dispute Resolution Institutions
-and Strategic Militarization.'' Unpublished manuscript, 2015.
+and Strategic Militarization.'' \emph{Journal of Political Economy} 127, no. 1 (2019), 378-418.
 
 \item Myerson, Roger B. ``Incentive Compatibility and the Bargaining Problem." \emph {Econometrica} 47 (1979), 61-73. 
 
