add footnote about material value functional form, pump up abstract

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -50,7 +50,7 @@ University of California, San Diego\\
 \maketitle
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's ability to cooperate or make peace, concessions can be used to indicate an interest in cooperation or peacemaking. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace or cooperation. We show this formally using a repeated game that is preceded by an opportunity to signal one's commitment to cooperation through the provision of concessions. We then use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace and cooperation. In this process, we open up a new rationale for mediation: to increase the efficiency of signaling in a preliminary round of negotiations and to overcome the concern that concessions will be used against the giver in the future. 
+When two parties are engaged in conflict and each distrusts the other's ability to cooperate or make peace, concessions can be used to indicate an interest in cooperation or peacemaking. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace or cooperation. Using a repeated game that is preceded by an opportunity to signal one's commitment to cooperation through the provision of concessions, we formally demonstrate that concerns over the future use of concessions can explain the existence of inefficient concessions. We then use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace and cooperation. In this process, we open up a new rationale for mediation: to increase the efficiency of signaling in a preliminary round of negotiations and to overcome the concern that concessions will be used against the giver in the future. 
 \end{abstract}
 
 
@@ -248,7 +248,7 @@ Concessions are immediately converted into civil society or military gifts and a
 
 This modification to the payoffs is the second change in the model relative to Sections~\ref{sec:model} and \ref{sec:bench}. We add a term to each of $T$, $W$, and $D$ that represents the additional benefit or harm flowing from the future material value of the concession. When both countries play Trust, they each receive the base benefit $T$ as well as an additional benefit of the concession they \textit{gave} that is scaled by the proportion that was invested in civil society as well as the base benefit of $T$.
 
-For example, if both countries play Fight, Country 1 receives an additional benefit term $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. However, Country 1 also incurs extra damages $D(1-\alpha_2) g_1$ that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The other payoffs are modified analogously.
+For example, if both countries play Fight, Country 1 receives an additional benefit term $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. However, Country 1 also incurs extra damages $D(1-\alpha_2) g_1$ that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The other payoffs are modified analogously.\footnote{The results are qualitatively unchanged if the gifts are not scaled by the variables that represent the impacts of cooperation and non-cooperation, or if they are scaled by these variables but with a proportion other than 1. The results are a bit simpler if there is no scaling, but we believe it is more realistic to assume that the future benefits and costs of the gifts are proportional to the direct benefits and costs of cooperation/non-cooperation. For instance, a county who could impose more damage without the future value of the concessions is likely to be able to better leverage a concession than a country who can impose less damage.}
 
 Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare in equilibrium is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the ``Peace'' outcome will be played. Conversely, in equilibrium, low types only participate in the ``War'' equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
 
