highlight contribution of concessions that don't need credible commitment

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -85,7 +85,7 @@ This paper revises our understanding of the reasons why efficient concessions ar
 
 We model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to follow through on a peace agreement. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmoud Abbas, President of the Palestinian National Authority, may be a low type with respect to his negotiations with Israel, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. 
 
-In our model, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
+In our model, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge. Another contribution is that the way we model concessions does not require countries to make an agreement that requires credible commitment, as is common in bargaining models. Instead, countries willingly provide a concession if they expect the signal it sends to provide a benefit in terms of future cooperation and public good provision.\footnote{When mediation is required to achieve peace in the model, it relies upon a manipulative mediator to enforce the required level of concessions.}
 
 In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as giving a gift (i.e. a concession) that is more costly to the giver than it is valuable to the recipient. 
 
