tweak last sentence of intro

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -107,7 +107,7 @@ This demonstration of the incentives for inefficient concessions leads to a new 
 
 It is essential to focus more precisely on the specific actions and environments that make use of particular types of mediation, which is how we approach the question. This paper models an environment where the primary issue is trust, not uncertainty about an opponent's capabilities, and where a mediator is employed who has manipulative abilities. Mediation rarely occurs in the absence of violent conflict (Bercovitch 1996; Beardsley 2006), and parties are more likely to seek mediation when they are entrenched in costly conflict (Bercovitch and Jackson 2001; Greig 2005b; Greig and Diehl 2006; Terris and Maoz 2005; Svensson 2008). We thus model parties to a conflict who can benefit from seeking mediation in order to overcome mistrust.\footnote{Alternatively, parties may seek a mediator to justify difficult concessions and avoid angering domestic constituencies (Allee and Huth 2006, Beardsley 2010; Beardsley and Lo 2014).}
 
-These empirical results have until recently lacked strong theoretical foundations. Mediation is not uncommon, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2009, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2019). In particular, Meirowitz et al. 2019 shows that---when asymmetric information is about the level of militarization---a `Myerson' mediator can circumvent the incentives for militarization that arises in unmediated peace talks and improve the changes for peace. This paper expands the theoretical literature by modeling the role of a manipulative mediator when the information asymmetry is about parties' abilities to commit to cooperation and concessions have future material value that could be used to harm the giver. Here, a mediator can achieve peace (1) in situations where bilateral concessions cannot, and (2) with concessions that are more efficient when bilateral concessions must be inefficient to achieve peace. 
+These empirical results have until recently lacked strong theoretical foundations. Mediation is not uncommon, but we are only beginning to understand why actors use it. Recently, mediation has begun to be modeled using mechanism design for settings where militarization or the resolve to fight are private information (Bester and Warneryd 2006; Fey and Ramsay 2009, 2010 and 2011; Horner et. al. 2010; Meirowitz et al. 2012, 2019). In particular, Meirowitz et al. 2019 shows that---when asymmetric information is about the level of militarization---a `Myerson' mediator can circumvent the incentives for militarization that arises in unmediated peace talks and improve the changes for peace. This paper expands the theoretical literature by modeling the role of a manipulative mediator when the information asymmetry is about parties' abilities to commit to cooperation and concessions have future material value that could be used to harm the giver. Here, a mediator can achieve peace or the provision of other public goods (1) in situations where bilateral concessions cannot, and (2) with concessions that are more efficient when bilateral concessions must be inefficient to achieve peace. 
 
 
 \section{Model}
