add detail about non-linearity in footnote on material value functional form

--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -248,7 +248,7 @@ Concessions are immediately converted into civil society or military gifts and a
 
 This modification to the payoffs is the second change in the model relative to Sections~\ref{sec:model} and \ref{sec:bench}. We add a term to each of $T$, $W$, and $D$ that represents the additional benefit or harm flowing from the future material value of the concession. When both countries play Trust, they each receive the base benefit $T$ as well as an additional benefit of the concession they \textit{gave} that is scaled by the proportion that was invested in civil society as well as the base benefit of $T$.
 
-For example, if both countries play Fight, Country 1 receives not only the immediate value of the concession and then $W-D$ in each period. Its welfare now has two additional terms. First, an additional benefit term in each period of the repeated game $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. Second, Country 1 also incurs extra damages $D(1-\alpha_2) g_1$ in each period of the repeated game that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The other payoffs are modified analogously.\footnote{The results are qualitatively unchanged if the gifts are not scaled by the variables that represent the impacts of cooperation and non-cooperation, or if they are scaled by these variables but with a proportion other than 1. The results are a bit simpler if there is no scaling, but we believe it is more realistic to assume that the future benefits and costs of the gifts are proportional to the direct benefits and costs of cooperation/non-cooperation. For instance, a county who could impose more damage without the future value of the concessions is likely to be able to better leverage a concession than a country who can impose less damage.}
+For example, if both countries play Fight, Country 1 receives not only the immediate value of the concession and then $W-D$ in each period. Its welfare now has two additional terms. First, an additional benefit term in each period of the repeated game $W(1-\alpha_1) g_2$, which accounts for the value of the received concession as well as how much Country 1 invested in the military. Second, Country 1 also incurs extra damages $D(1-\alpha_2) g_1$ in each period of the repeated game that are proportional to the size of the concession it \textit{gave} and how much of that concession was invested in the military by Country 2. The other payoffs are modified analogously.\footnote{The results are qualitatively unchanged if the gifts are not scaled by the variables that represent the impacts of cooperation and non-cooperation, or if they are scaled by these variables but with a proportion other than 1 or many plausible non-linear functions of $T$, $W$ and $D$. The results are a bit simpler if there is no scaling, but we believe it is more realistic to assume that the future benefits and costs of the gifts are proportional to the direct benefits and costs of cooperation/non-cooperation. For instance, a county who could impose more damage without the future value of the concessions is likely to be able to better leverage a concession than a country who can impose less damage.}
 
 Because $\al_i$ enters into the payoffs in a linear fashion, the choice that maximizes welfare in equilibrium is $\alpha=1$ for high types since a concession would only come from another high type in equilibrium, and thus only the ``Peace'' outcome will be played. Conversely, in equilibrium, low types only participate in the ``War'' equilibrium and thus maximize their payoffs by choosing $\alpha=0$. 
 
